[package]
name = "graphctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytes = "1.6.0"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive","env"] }
config = "0.14.0"
dialoguer = "0.11.0"
hex = "0.4.3"
home = "0.5.9"
keyring = "2.3.2"
libsql = "0.3.2"
ring = "0.17.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["v4"] }
